<resources>
    <string name="app_name">WeiLy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_ok">OK</string>
    <string name="action_edit">Edit</string>
    <string name="action_logout">Logout</string>
    <string name="action_open">Open</string>
    <string name="action_cancel">Cancel</string>
    <string name="intent_show_page">Time</string>
    <string name="intent_widget_text">text</string>
    <string name="url_show_page">http://www.dujin.org/sys/bing/1366.php</string>
    <string name="url_widget">https://api.lwl12.com/hitokoto/main/get</string>
    <string name="url_login">http://bluewolfrain.cn:8080/weily/account/login?</string>
    <string name="file_sharedPreferences_widget">widget</string>
    <string name="name_widget_refresh_time">refresh_time</string>
    <string name="name_widget_text_color">text_color</string>
    <string name="name_widget_text_alignment">text_alignment</string>
    <string name="name_widget_text_now">text_now</string>
    <string name="name_widget_is_enabled">isEnabled</string>
    <string name="name_widget_auto_refresh">auto_refresh</string>
    <string name="name_auto_login">auto_login</string>
    <string name="nav_introduction">Introduction</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_member">Member</string>
    <string name="nav_honor">Honor</string>
    <string name="nav_resources">Resources</string>
    <string name="nav_usage">Usage</string>
    <string name="nav_exit">Exit</string>
    <string name="error_out_of_size_username">Please enter 4 to 20 characters!</string>
    <string name="error_out_of_size_password">Please enter 6 to 16 characters!</string>
    <string name="error_wrong_format">Wrong format!</string>
    <string name="error_permission_faild">Authorization exception! </string>
    <string name="error_widget">Please Check Your Network! </string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_click">Click here to login</string>
    <string name="hint_double_click">Press twice to exit.</string>
    <string name="hint_refresh_time">Please Enter Number (Min)</string>
    <string name="hint_text_color">Please enter a color value (RGB)</string>
    <string name="hint_usage">Please Enter Amount</string>
    <string name="hint_person">Please Enter the Person</string>
    <string name="hint_broadcast">The Broadcast Send! </string>
    <string name="hint_disabled">Please Add The Widget! </string>
    <string name="text_income">Income</string>
    <string name="text_outcome">Outcome</string>
    <string name="text_share">WeiLy, not just a lab! </string>
    <string name="text_title_introduce">WeiLy Technology Laboratory</string>
    <string name="text_button_more">Go to know more! </string>
    <string name="text_button_logout">Log out</string>
    <string name="text_text_introduce">Web development, Android development, Unity3D development, art design. WeiLy development so far, has not only a laboratory, more of a platform, providing a programming development, learning exchange, technology sharing, the formation of the team, innovation and entrepreneurship platform! </string>
    <string name="text_android_title">Android Develop</string>
    <string name="text_web_title">Web Develop</string>
    <string name="text_unity_title">Unity 3D Develop</string>
    <string name="text_art_title">Art Develop</string>
    <string name="text_settings_automaticLogin">Automatic Login</string>
    <string name="text_settings_widgetSettings">Widget Settings</string>
    <string name="text_settings_aboutUs">About Us</string>
    <string name="text_settings_widget_refresh_time">Refresh Time</string>
    <string name="text_refresh_now">Refresh Now</string>
    <string name="text_auto_refresh">Auto Refresh</string>
    <string name="text_click_listener">Click Event</string>
    <string name="text_text_color">Text Color</string>
    <string name="text_text_dimen">Text Alignment</string>
    <string name="text_about_version">V1.2.0</string>
    <string name="text_about_team">Made by WeiLy</string>
    <string name="text_introduce_android">
        "Android is a mobile operating system developed by Google, based on the Linux kernel and designed primarily for touchscreen mobile devices such as smartphones and tablets. "
        "Android's user interface is mainly based on direct manipulation, using touch gestures that loosely correspond to real-world actions, such as swiping, tapping and pinching, to manipulate on-screen objects, along with a virtual keyboard for text input. "
        "In addition to touchscreen devices, Google has further developed Android TV for televisions, Android Auto for cars, and Android Wear for wrist watches, each with a specialized user interface. "
        "Variants of Android are also used on notebooks, game consoles, digital cameras, and other electronics.\n\n"

        "Android has the largest installed base of all operating systems (OS) of any kind."
        "Android has been the best selling OS on tablets since 2013, and on smartphones it is dominant by any metric.\n\n"

        "Initially developed by Android, Inc., which Google bought in 2005, Android was unveiled in 2007 along with the founding of the Open Handset Alliance – a consortium of hardware, software, and telecommunication companies devoted to advancing open standards for mobile devices."
        "As of July 2013, the Google Play store has had over one million Android applications ("apps") published – including many "business-class apps" that rival competing mobile platforms – and over 50 billion applications downloaded."
        "An April–May 2013 survey of mobile application developers found that 71% of developers create applications for Android, and a 2015 survey found that 40% of full-time professional developers see Android as their priority target platform, which is comparable to Apple's iOS on 37% with both platforms far above others."
        "In September 2015, Android had 1.4 billion monthly active devices.\n\n"

        "Android's source code is released by Google under open source licenses, although most Android devices ultimately ship with a combination of open source and proprietary software, including proprietary software required for accessing Google services."
        "Android is popular with technology companies that require a ready-made, low-cost and customizable operating system for high-tech devices."
        "Its open nature has encouraged a large community of developers and enthusiasts to use the open-source code as a foundation for community-driven projects, which deliver updates to older devices, add new features for advanced users or bring Android to devices originally shipped with other operating systems."
        "The success of Android has made it a target for patent (and copyright) litigation as part of the so-called "smartphone wars" between technology companies.\n"
    </string>
    <string name="text_introduce_unity">
        "Unity is a cross-platform game engine developed by Unity Technologies and used to develop video games for PC, consoles, mobile devices and websites."
        "First announced only for OS X, at Apple's Worldwide Developers Conference in 2005, it has since been extended to target 21 platforms."
        "Nintendo provides free licenses of Unity 5 to all licensed Nintendo Developers along with their software development kits (SDKs) for the Wii U and Nintendo 3DS Family.\n\n"

        "Five major versions of Unity have been released."
        "At the 2006 WWDC show, Apple named Unity as the runner up for its Best Use of Mac OS X Graphics category.\n"
    </string>
</resources>