<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/nav_introduction"
            android:id="@+id/nav_introduce"
            android:checked="true"
            android:icon="@drawable/ic_introduction"/>
        <item
            android:title="@string/nav_honor"
            android:id="@+id/nav_honor"
            android:icon="@drawable/ic_honor"/>
        <item
            android:title="@string/nav_resources"
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_resources"/>
        <item
            android:title="@string/nav_member"
            android:id="@+id/nav_member"
            android:icon="@drawable/ic_member"/>
        <item
            android:title="@string/nav_usage"
            android:id="@+id/nav_usage"
            android:icon="@drawable/ic_usage"/>
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/nav_send" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_exit"/>
        </menu>
    </item>

</menu>
