<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_name"
        android:textSize="@dimen/dialog_about_title_size"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/text_about_version"
        android:textSize="@dimen/dialog_about_version_size"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/text_about_team"
        android:textSize="@dimen/dialog_about_team_size"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"/>

</LinearLayout>