<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_widget_setting"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weily.weily.activity.setting.WidgetSettingActivity"
    tools:showIn="@layout/activity_widget_setting">

    <RelativeLayout
        android:id="@+id/layout_refresh_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/settings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_margin_start_end"
            android:text="@string/text_settings_widget_refresh_time"/>

    </RelativeLayout>

    <View
        android:id="@+id/setting_dimen_a"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_dimen_height"
        android:layout_below="@id/layout_refresh_time"/>

    <RelativeLayout
        android:id="@+id/layout_refresh"
        android:layout_width="match_parent"
        android:layout_below="@id/setting_dimen_a"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/settings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_margin_start_end"
            android:text="@string/text_refresh_now"/>

    </RelativeLayout>

    <View
        android:id="@+id/setting_dimen_c"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_dimen_height"
        android:layout_below="@id/layout_refresh"/>

    <RelativeLayout
        android:id="@+id/layout_click"
        android:layout_width="match_parent"
        android:layout_below="@id/setting_dimen_c"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/settings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_margin_start_end"
            android:text="@string/text_click_listener"/>

    </RelativeLayout>

    <View
        android:id="@+id/setting_dimen_d"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_dimen_height"
        android:layout_below="@id/layout_click"/>

    <RelativeLayout
        android:id="@+id/layout_color"
        android:layout_width="match_parent"
        android:layout_below="@id/setting_dimen_d"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/settings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_margin_start_end"
            android:text="@string/text_text_color"/>

    </RelativeLayout>

    <View
        android:id="@+id/setting_dimen_e"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_dimen_height"
        android:layout_below="@id/layout_color"/>

    <RelativeLayout
        android:id="@+id/layout_alignment"
        android:layout_width="match_parent"
        android:layout_below="@id/setting_dimen_e"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/settings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_margin_start_end"
            android:text="@string/text_text_dimen"/>

    </RelativeLayout>

</RelativeLayout>
