<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="@dimen/introduce_direction_item_padding"
            android:id="@+id/android_layout"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/introduce_direction_img_size"
                android:background="@mipmap/android"
                android:id="@+id/img_android"
                android:layout_alignParentStart="true"
                android:layout_height="@dimen/introduce_direction_img_size"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_android"
                android:gravity="start"
                android:layout_marginStart="@dimen/introduce_direction_item_padding"
                android:textSize="@dimen/introduce_direction_text_size"
                android:text="@string/text_android_title"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="@dimen/introduce_direction_item_padding"
            android:id="@+id/unity_layout"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/introduce_direction_img_size"
                android:background="@mipmap/unity"
                android:id="@+id/img_unity"
                android:layout_alignParentEnd="true"
                android:layout_height="@dimen/introduce_direction_img_size"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:layout_marginEnd="@dimen/introduce_direction_item_padding"
                android:layout_toStartOf="@id/img_unity"
                android:textSize="@dimen/introduce_direction_text_size"
                android:text="@string/text_unity_title"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="@dimen/introduce_direction_item_padding"
            android:id="@+id/web_layout"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/introduce_direction_img_size"
                android:background="@mipmap/web"
                android:id="@+id/img_web"
                android:layout_alignParentStart="true"
                android:layout_height="@dimen/introduce_direction_img_size"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_web"
                android:gravity="start"
                android:layout_marginStart="@dimen/introduce_direction_item_padding"
                android:textSize="@dimen/introduce_direction_text_size"
                android:text="@string/text_web_title"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="@dimen/introduce_direction_item_padding"
            android:id="@+id/art_layout"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/introduce_direction_img_size"
                android:background="@mipmap/art"
                android:id="@+id/img_art"
                android:layout_alignParentEnd="true"
                android:layout_height="@dimen/introduce_direction_img_size"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:layout_marginEnd="@dimen/introduce_direction_item_padding"
                android:layout_toStartOf="@id/img_art"
                android:textSize="@dimen/introduce_direction_text_size"
                android:text="@string/text_art_title"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
