<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_setting"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weily.weily.activity.setting.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <RelativeLayout
        android:id="@+id/content_settings_relativeLayoutOne"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/settings">

        <Switch
            android:id="@+id/switch_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/item_setting_margin_start_end"/>

        <TextView
            android:id="@+id/content_settings_textViewOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/switch_auto"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_margin_start_end"
            android:text="@string/text_settings_automaticLogin"/>

    </RelativeLayout>

    <View
        android:id="@+id/content_settings_viewOne"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_dimen_height"
        android:layout_below="@+id/content_settings_relativeLayoutOne"/>

    <RelativeLayout
        android:id="@+id/content_settings_relativeLayoutTwo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_height"
        android:layout_below="@+id/content_settings_viewOne"
        android:background="@color/settings">

        <TextView
            android:id="@+id/content_settings_textViewTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_margin_start_end"
            android:text="@string/text_settings_widgetSettings"/>

    </RelativeLayout>

    <View
        android:id="@+id/content_settings_viewTwo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_dimen_height"
        android:layout_below="@+id/content_settings_relativeLayoutTwo"/>

    <RelativeLayout
        android:id="@+id/content_settings_relativeLayoutThree"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_height"
        android:layout_below="@+id/content_settings_viewTwo"
        android:background="@color/settings">

        <TextView
            android:id="@+id/content_settings_textViewThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_setting_dimen_height"
            android:text="@string/text_settings_aboutUs"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_setting_height"
        android:layout_below="@+id/content_settings_relativeLayoutThree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/item_setting_button_margin_top"
        android:background="@drawable/shape"
        android:text="@string/text_button_logout"
        android:textColor="@color/button_logOut"/>

</RelativeLayout>
